--- a/homepage.css
+++ b/homepage.css
@@ -62,6 +62,20 @@ text-align: center;
 padding: 10px;
 background-color: red;
 margin: 20px;
+padding: 0;
+border-width: 2px;
+border-color: white;
+background: transparent;
+font-weight: 400;
+font-size: 20px;
+font-family: inherit;
+padding: 5px 12px;
+border-width: 0;§
+border-radius: 4px;
+color: : rgba(255,255,255,0.4);
+color: #fff;
+-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
 
 }
 
