--- a/homepage.css
+++ b/homepage.css
@@ -88,10 +88,12 @@ transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
 }
 
 
+
 div.imagen-logo{
 	width: 35%;
 	text-align: center;
 	transform: translateX(100%);
+	padding-top: 70px;
 }
 
 #naveg{
@@ -99,6 +101,12 @@ div.imagen-logo{
 
       }
 
+.contenido{
+
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
 div.presentacion{
 
 background-color: black;
