--- a/homepage.css
+++ b/homepage.css
@@ -42,26 +42,39 @@ font-family: 'Cabin Sketch', cursive;
 
 }
 
+header{
 
-.main-header{
-  padding: 5px;
-	background-color: #282828;
-	display: flex;
-	justify-content: flex-end;
-	position: fixed;
-	width: 100%;
-	z-index: 10;
-
-}
-
-header div{
-
-			padding-right: 0;
-			padding-left: 0;
-
+width: 100%;
+overflow: hidden;
+height: 8%;
+background-color: black;
+position: fixed;
+z-index: 100;
 
 }
 
+#tituloDeArriba{
+
+float: left;
+width: 20%;
+padding: 5%;
+margin-left: 3%;
+margin-right: 10%;
+color: white;
+width: 20%;
+
+
+}
+
+div.divheader{
+
+float: right;
+margin-right: 2%;
+margin-left: 10%;
+width: 30%;
+
+
+}
 header div button{
 
 text-align: center;
@@ -85,6 +98,28 @@ transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
 
 }
 
+/*.main-header{
+  padding: 5px;
+	background-color: #282828;
+	display: flex;
+	justify-content: flex-end;
+	position: fixed;
+	width: 100%;
+	z-index: 10;
+
+}
+
+header div{
+
+			padding-right: 0;
+			padding-left: 0;
+
+
+}
+
+
+
+*/
 .logo{
 	width: 100%;
     height: auto;
@@ -171,8 +206,20 @@ div.boton-presentacion{
 
 
 #quien{ display: none;
+	font-size: 150%;
+	text-align: center;
+	margin-left: 1vw;
+	margin-right: 1vw;
+	margin-top: 1vh;
+	margin-bottom: 1vh;
 }
 #que{ display: none;
+	font-size: 150%;
+	text-align: center;
+	margin-left: 1vw;
+	margin-right: 1vw;
+	margin-top: 1vh;
+	margin-bottom: 1vh;
 
 };
 
@@ -209,8 +256,7 @@ h2{
 	background-color: #ffe5fe
 
 }
-
-.equipo{
+/*.equipo{
 
 	display: flex;
 	justify-content: center;
@@ -218,7 +264,17 @@ h2{
 	background: gainsboro;
 	background-color: transparent;
 	margin: 15%;
-justify-content: space-between;
+	justify-content: space-between;
+
+}*/
+
+.equipo{
+
+overflow: hidden;
+width: 100%
+margin: 15%;
+background-color: transparent;
+
 
 }
 
@@ -233,22 +289,26 @@ width: 80%;
 
 
 
+
 }
 
 div.perfil{
 	margin-left: 1vw;
 	margin-right: 1vw;
+
 }
 
 
 
-p{
+.descripcion{
+
 	font-size: 150%;
 	text-align: center;
 	margin-left: 1vw;
 	margin-right: 1vw;
 	margin-top: 1vh;
 	margin-bottom: 1vh;
+
 }
 
 .main-nav{
