--- a/homepage.css
+++ b/homepage.css
@@ -50,18 +50,22 @@ height: 8%;
 background-color: black;
 position: fixed;
 z-index: 100;
+height: 15%;
 
 }
 
-#tituloDeArriba{
+.main-header p{
 
-float: left;
-width: 20%;
-padding: 5%;
-margin-left: 3%;
-margin-right: 10%;
-color: white;
-width: 20%;
+	float: left;
+	width: 20%;
+	padding: 5%;
+	margin-left: 3%;
+	margin-right: 10%;
+	color: white;
+	width: 20%;
+	font-size: 150%;
+	margin-top: 5%;
+	margin-left: 10%;
 
 
 }
@@ -75,26 +79,25 @@ width: 30%;
 
 
 }
-header div button{
+header button{
 
-text-align: center;
-padding: 10px;
-background-color: gainsboro;
-margin: 20px;
-padding: 0;
-border-width: 2px;
-border-color: white;
-background: transparent;
-font-weight: 400;
-font-size: 20px;
-font-family: 'Cabin Sketch', cursive;
-padding: 5px 12px;
-border-width: 0;§
-border-radius: 4px;
-color: : rgba(255,255,255,0.4);
-color: #fff;
--webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+	text-align: center;
+	    padding: 5px;
+	    background-color: gainsboro;
+	    padding: 0;
+	    border-width: 2px;
+	    border-color: white;
+	    background: transparent;
+	    font-weight: 400;
+	    font-size: 15px;
+	    font-family: 'Cabin Sketch', cursive;
+	    padding: 5px 12px;
+	    border-width: 0;
+	    margin-top: 3%;
+	    color: : rgba(255,255,255,0.4);
+	    color: #fff;
+	    -webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+	    transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
 
 }
 
