--- a/homepage.css
+++ b/homepage.css
@@ -47,7 +47,7 @@ header{
 width: 100%;
 overflow: hidden;
 height: 8%;
-background-color: black;
+background-color: #black;
 position: fixed;
 z-index: 100;
 
