--- a/homepage.css
+++ b/homepage.css
@@ -194,6 +194,7 @@ div.boton-presentacion{
 
 	display: flex;
 	justify-content: center;
+	margin-left: 3%;
 }
 
 #registrate2	{
@@ -241,10 +242,11 @@ margin-bottom: 6vh;
 
 
 div.preguntas{
-width: 20%;
+width: 30%;
 text-align: center;
 display: flex;
-
+margin-left: 7%;
+margin-right: 7%;
 
 }
 
@@ -285,11 +287,12 @@ background-color: transparent;
 
 border-radius: 50%;
 width: 20%;
-margin: 15%;
 border: solid 2px;
 border-color:#c15757;
 width: 80%;
-
+margin-top: 8%;
+margin-left: 11%;
+margin-bottom: 5%;
 
 
 
