--- a/homepage.css
+++ b/homepage.css
@@ -25,7 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 *{
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 
 }
 
@@ -33,7 +33,7 @@ font-family: 'Cabin Sketch', cursive;
 body{
 font-family: sans-serif;
 background-color:  #282828;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 
 }
 .container{
@@ -47,21 +47,24 @@ header{
 width: 100%;
 overflow: hidden;
 height: 8%;
-background-color: #black;
+background-color: black;
 position: fixed;
 z-index: 100;
+height: 15%;
 
 }
 
-#tituloDeArriba{
+.main-header p{
 
-float: left;
-width: 20%;
-padding: 5%;
-margin-left: 3%;
-margin-right: 10%;
-color: white;
-width: 20%;
+	float: left;
+	width: 20%;
+	margin-left: 3%;
+	margin-right: 10%;
+	color: white;
+	width: 20%;
+	font-size: 10vw;
+	margin-top: 5%;
+	margin-left: 10%;
 
 
 }
@@ -75,26 +78,25 @@ width: 30%;
 
 
 }
-header div button{
+header button{
 
-text-align: center;
-padding: 10px;
-background-color: gainsboro;
-margin: 20px;
-padding: 0;
-border-width: 2px;
-border-color: white;
-background: transparent;
-font-weight: 400;
-font-size: 20px;
-font-family: 'Cabin Sketch', cursive;
-padding: 5px 12px;
-border-width: 0;§
-border-radius: 4px;
-color: : rgba(255,255,255,0.4);
-color: #fff;
--webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+	text-align: center;
+	    padding: 5px;
+	    background-color: gainsboro;
+	    padding: 0;
+	    border-width: 2px;
+	    border-color: white;
+	    background: transparent;
+	    font-weight: 400;
+	    font-size: 15px;
+	    font-family: 'Slabo 27px', cursive;
+	    padding: 5px 12px;
+	    border-width: 0;
+	    margin-top: 3%;
+	    color: : rgba(255,255,255,0.4);
+	    color: #fff;
+	    -webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+	    transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
 
 }
 
@@ -136,6 +138,9 @@ transition-timing-function: ease-in-out;
 
 }
 
+button{
+	border-radius: 5%;
+}
 
 div.imagen-logo{
 	width: 100%;
@@ -173,7 +178,7 @@ margin-bottom: 40px;
 #Bienvenidos{
 
 font-size: 50px;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 text-align: center;
 color: gainsboro;
 
@@ -182,7 +187,7 @@ color: gainsboro;
 #IKIGAI{
 
 font-size: 100px;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 text-align: center;
 color: gainsboro;
 }
@@ -191,6 +196,7 @@ div.boton-presentacion{
 
 	display: flex;
 	justify-content: center;
+	margin-left: 3%;
 }
 
 #registrate2	{
@@ -198,7 +204,7 @@ div.boton-presentacion{
 	padding: 12px;
 	background-color: gainsboro;
 	font-size: 30px;
-	font-family: 'Cabin Sketch', cursive;
+	font-family: 'Slabo 27px', cursive;
 	margin-top: 22px;
 
 
@@ -238,10 +244,11 @@ margin-bottom: 6vh;
 
 
 div.preguntas{
-width: 20%;
+width: 30%;
 text-align: center;
 display: flex;
-
+margin-left: 7%;
+margin-right: 7%;
 
 }
 
@@ -282,11 +289,12 @@ background-color: transparent;
 
 border-radius: 50%;
 width: 20%;
-margin: 15%;
 border: solid 2px;
 border-color:#c15757;
 width: 80%;
-
+margin-top: 8%;
+margin-left: 26%;
+margin-bottom: 5%;
 
 
 
@@ -300,7 +308,7 @@ div.perfil{
 
 
 
-.descripcion{
+
 
 	font-size: 150%;
 	text-align: center;
@@ -324,7 +332,7 @@ text-align: right;
 color: white;
 background-color: #282828;
 font-weight: bold;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 
 }
 
@@ -333,15 +341,55 @@ li a{
 text-decoration: none;
 list-style: none;
 color: white;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 text-align: center;
+font-size: 200%;
 
 
 }
+
+.sources{
+text-align: center;
+margin-left: 27%;
+margin-top: 5vh;
+
 }
 
+#sources-img{
+	overflow: hidden;
+}
+
+#sources-img li {
+float: left;
+width: 15vw;
+display: block;
 
 
+}
+
+.descripcion{
+color: WHITE;
+
+
+}
+
+p.descripcion {
+	text-align: center;
+}
+
+.centersources{
+	text-align: center;
+
+
+}
+.contenido{
+	background-color: #282828;
+}
+
+.equipo{
+
+	background-color: #gainsboro
+}
 
 li{
 list-style: none;
@@ -398,11 +446,19 @@ padding-bottom: 2%;
 
 h3 {
 
-background-color: #282828;
+background-color: #282828;	
 text-align: center;
+color: #282828;
 padding: 10px;
 border-radius: 15%;
-font-family: 'Cabin Sketch', cursive;
+font-family: 'Slabo 27px', cursive;
 font-size: 40px;
+
+}
+
+
+.perfil img{
+width: 50%;
+
 
 }
