dale que se puede

--- a/plantillamediaquery.css
+++ b/plantillamediaquery.css
@@ -7,11 +7,12 @@
       padding-top: 2%;
       padding-bottom: 2%;
       text-align: center;
-      
+
 
 
   }
 
+.equipo .perfil
 
 
   .banner img{
