--- a/sprint_1/homepage.css
+++ b/sprint_1/homepage.css
@@ -12,6 +12,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
+	/*jhkj*/
 	padding: 0;
 	border: 0;
 	font-size: 100%;
