--- a/IntegradorIK/sprint_1/registrate2.css
+++ b/IntegradorIK/sprint_1/registrate2.css
@@ -24,6 +24,174 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
+
+}
+
+.glitch {
+  color: white;
+  font-size: 100px;
+  position: relative;
+  width: 400px;
+  margin: 0 auto;
+}
+
+@keyframes noise-anim {
+  0% {
+    clip: rect(47px, 9999px, 73px, 0);
+  }
+  5% {
+    clip: rect(76px, 9999px, 94px, 0);
+  }
+  10% {
+    clip: rect(59px, 9999px, 16px, 0);
+  }
+  15% {
+    clip: rect(43px, 9999px, 76px, 0);
+  }
+  20% {
+    clip: rect(93px, 9999px, 87px, 0);
+  }
+  25% {
+    clip: rect(88px, 9999px, 1px, 0);
+  }
+  30% {
+    clip: rect(99px, 9999px, 93px, 0);
+  }
+  35% {
+    clip: rect(80px, 9999px, 63px, 0);
+  }
+  40% {
+    clip: rect(84px, 9999px, 89px, 0);
+  }
+  45% {
+    clip: rect(77px, 9999px, 81px, 0);
+  }
+  50% {
+    clip: rect(55px, 9999px, 58px, 0);
+  }
+  55% {
+    clip: rect(46px, 9999px, 79px, 0);
+  }
+  60% {
+    clip: rect(48px, 9999px, 69px, 0);
+  }
+  65% {
+    clip: rect(36px, 9999px, 47px, 0);
+  }
+  70% {
+    clip: rect(7px, 9999px, 47px, 0);
+  }
+  75% {
+    clip: rect(1px, 9999px, 15px, 0);
+  }
+  80% {
+    clip: rect(76px, 9999px, 23px, 0);
+  }
+  85% {
+    clip: rect(94px, 9999px, 17px, 0);
+  }
+  90% {
+    clip: rect(19px, 9999px, 12px, 0);
+  }
+  95% {
+    clip: rect(81px, 9999px, 52px, 0);
+  }
+  100% {
+    clip: rect(24px, 9999px, 52px, 0);
+  }
+}
+.glitch:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -1px 0 red;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim 2s infinite linear alternate-reverse;
+}
+
+@keyframes noise-anim-2 {
+  0% {
+    clip: rect(26px, 9999px, 48px, 0);
+  }
+  5% {
+    clip: rect(42px, 9999px, 86px, 0);
+  }
+  10% {
+    clip: rect(87px, 9999px, 1px, 0);
+  }
+  15% {
+    clip: rect(17px, 9999px, 4px, 0);
+  }
+  20% {
+    clip: rect(60px, 9999px, 82px, 0);
+  }
+  25% {
+    clip: rect(51px, 9999px, 9px, 0);
+  }
+  30% {
+    clip: rect(45px, 9999px, 65px, 0);
+  }
+  35% {
+    clip: rect(29px, 9999px, 46px, 0);
+  }
+  40% {
+    clip: rect(67px, 9999px, 14px, 0);
+  }
+  45% {
+    clip: rect(87px, 9999px, 23px, 0);
+  }
+  50% {
+    clip: rect(15px, 9999px, 96px, 0);
+  }
+  55% {
+    clip: rect(49px, 9999px, 80px, 0);
+  }
+  60% {
+    clip: rect(74px, 9999px, 45px, 0);
+  }
+  65% {
+    clip: rect(36px, 9999px, 24px, 0);
+  }
+  70% {
+    clip: rect(19px, 9999px, 90px, 0);
+  }
+  75% {
+    clip: rect(89px, 9999px, 28px, 0);
+  }
+  80% {
+    clip: rect(4px, 9999px, 97px, 0);
+  }
+  85% {
+    clip: rect(1px, 9999px, 55px, 0);
+  }
+  90% {
+    clip: rect(63px, 9999px, 5px, 0);
+  }
+  95% {
+    clip: rect(94px, 9999px, 94px, 0);
+  }
+  100% {
+    clip: rect(3px, 9999px, 7px, 0);
+  }
+}
+.glitch:before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: 1px 0 blue;
+  top: 0;
+  color: white;
+  background: black;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-anim-2 3s infinite linear alternate-reverse;
+}
+
+
 header{
   font-size: 7vw;
   text-align: center;
@@ -34,11 +202,15 @@ header{
 
 }
 
-.errores-de-campo{
 
-color: white;
+
+#forgot{
+	text-align: center;
+	color: #fed136;
+	text-decoration: none;
 
 }
+
 body{
 
 display: block;
@@ -52,7 +224,7 @@ input{
 #presentacionDeEscritorio{
 
 display: none;
-color: gainsboro;
+color: #ec7a2c;
 
 }
 
@@ -85,7 +257,7 @@ margin-left: auto;
 margin-right: auto;
 background-color: #black;
 border: 3px solid ;
-border-radius: 4px;
+border-radius: 15px;
 width: 75%;
 box-shadow: 0 1px 1px rgba(0,0,0,.05);
 
@@ -93,7 +265,7 @@ box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
 
 div.registrate{
-	background-color: gainsboro;
+	background-color: #ec7a2c;
 	    text-align: left;
 	    padding-left: 4vw;
 	    padding-top: 1vw;
@@ -118,28 +290,39 @@ font-size: 6vw;
 
 }
 
+.cuadros:focus{
+	color: #ec7a2c;
+}
+
 input{
 
 	display: block;
 	width: 100%;
-	height: 10vw;
+	height: 15vw;
 	font-size: 5vw;
 	line-height: 1.428571429;
 	color: black;
 	background-image: none;
-	border: 1px solid #ccc;
+	border: 1px solid #ec7a2c;
 	border-radius: 4px;
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	box-shadow: inset 0 1px 1px rgba(254,209,54,.075);
 	margin-bottom: 5vw;
 	margin-top: 5vw;
+	border-color: #ec7a2c;
+	background-color: #e1e1e1;
+}
+
+input:focus{
+border-color: #ec7a2c;
+background-color: #fafafa;
 
 }
 .cuerpo{
-background-color: black;
+background-color: #fff;
 
 }
 .formulario{
-	background-color: black;
+	background-color: #fff;
 }
 .enviar{
 
@@ -148,6 +331,7 @@ text-align: center;
 
 
 }
+a{text-decoration: none;}
 
 .cuerpo button{
 
@@ -157,15 +341,22 @@ text-align: center;
 	    border-radius: 3px;
 	    width: 40%;
 	    margin-left: 3%;
-	    border-color: gainsboro;
+	    border-color: #ec7a2c;
 			 cursor: pointer;
+}
+
+#forgot .forgot{
+	text-align: center;
+	color: #fed136;
+	text-decoration: none;
+
 }
 
 .mandale{
 
 	margin-left: auto;
 margin-right: auto;
-background-color: #fff;
+background-color: #fed136;
 border: 3px solid;
 border-radius: 4px;
 width: 70%;
@@ -188,9 +379,28 @@ width: 100%;
 }
 
 
+
+#forgot{
+text-decoration: none;
+color: #ec7a2c;
+background-color: transparent;
+font-size: 12px;
+letter-spacing: 1px;
+font-weight: 600;
+}
+#forgot:hover{
+
+	color: #ec7a2c;
+	font-size: 12px;
+	letter-spacing: 1px;
+	font-weight: 600;
+
+
+}
+
 #iniciar{
 text-decoration: none;
-color: gainsboro;
+color: #ec7a2c;
 background-color: transparent;
 color: black;
 }
@@ -214,7 +424,7 @@ color: black;
 padding-left: 0vw;
 padding: 0.5vw 0.5vw;
 text-align: center;
-border: .05px solid;
+
 text-align: center;
 	}
 
@@ -246,16 +456,24 @@ div.imagen-logo{
 		font-size: 1vw;
     height: 1.5vw;
     width: 90%;
-    border: 1px solid #000;
+    border: 2px solid #f5f5f5;
     margin-top: 0.5vw;
     float: left;
     margin-bottom: 0.5vw;
+		height: 4vh;
+		background: #f5f5f5;
+		border-radius: 4px;
+
+}
+input:focus{
+border: 1px solid #ec7a2c;
+color: #ec7a2c;
+border-radius: 4px;
+
 }
 
 
-
 body{
-	overflow: hidden;
 	margin-bottom: 8vh;
 
 }
@@ -276,7 +494,7 @@ text-align: center;
 
 #presentacionDeEscritorio div{
 
-color: gainsboro;
+color: #ec7a2c;
 font-size: 7vw;
 
 
@@ -302,7 +520,7 @@ section{
 margin-left: auto;
 margin-right: auto;
 margin-top: 4vh;
-background-color: black;
+background-color: #fff;
 margin	-top: 10vw;
 border: 1px white solid;
 border-radius: 3px;
@@ -331,7 +549,10 @@ margin-left: auto;
 		margin-top: 1vw;
     margin-bottom: 1vw;
 		width: 80%;
-		background-color: springgreen;
+		background: #ec7a2c;
+		margin-top: 25px;
+		color: #fff;
+		cursor: pointer;
 	}
 	.mandale{
 		margin-right: auto;
@@ -381,5 +602,12 @@ margin-bottom: 2vh;
 
 	}
 
+
+}
+
+#forgot.forgot{
+	text-align: center;
+	color: #fed136;
+	text-decoration: none;
 
 }
